<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".fragment.WebViewSampleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/search"
                android:inputType="textAutoComplete"
                android:background="#FFFFFF"/>

            <ImageButton
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/baseline_search_24"
                android:background="#FFFFFF"/>
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/reloadWebView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageButton
                android:id="@+id/go_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:contentDescription="@string/go_back"
                android:src="@mipmap/baseline_keyboard_arrow_left_black_48" />

            <ImageButton
                android:id="@+id/go_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:contentDescription="@string/go_forward"
                android:src="@mipmap/baseline_keyboard_arrow_right_black_48" />
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>
</FrameLayout>